k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bite-brew-cafe-backend
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: https://bite-brew-backend.onrender.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bite-brew-cafe-backend
                port:
                  number: 80
